解决devServer问题,dev和pro都要加HtmlWebpackPlugin

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development webpack-dev-server --inline --config ./build/webpack.dev.config.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.pro.config.js"
+    "build": "cross-env NODE_ENV=production webpack --inline --config ./build/webpack.pro.config.js"
   },
   "keywords": [],
   "author": "",
