--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "antd": "^3.24.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2"
   }
 }
