--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development webpack-dev-server --inline --config ./build/webpack.dev.config.js",
-    "build": "cross-env NODE_ENV=production webpack --inline --config ./build/webpack.pro.config.js"
+    "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.pro.config.js"
   },
   "keywords": [],
   "author": "",
@@ -33,9 +33,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "progress-bar-webpack-plugin": "^1.12.1",
-    "purify-css": "^1.2.5",
-    "purifycss-webpack": "^0.7.0",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
