--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "antd": "^3.24.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-loadable": "^5.5.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2"
   }
