使用react-hot-loader配置页面局部刷新

--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,7 @@
                 "style": "css"
             },
             "antd"
-        ]
+        ],
+        "react-hot-loader/babel"
     ]
 }
