--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hot-loader": "^4.12.15",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
+    "terser-webpack-plugin": "^2.2.1",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-bundle-analyzer": "^3.6.0",
