--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^16.10.2",
     "react-loadable": "^5.5.0",
     "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "uuid": "^3.3.3"
   }
 }
