--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "file-loader": "^4.2.0",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
