--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,17 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"],
+    "presets": [
+        "@babel/preset-react",
+        // "@babel/preset-env",
+        [
+            "@babel/preset-env",
+            {
+                "useBuiltIns": "usage"
+            }
+        ]
+    ],
     "plugins": [
         "@babel/plugin-proposal-class-properties",
+        "@babel/transform-runtime",
         [
             "import",
             {
