--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
   },
   "dependencies": {
     "antd": "^3.24.2",
+    "crypto-js": "^4.0.0",
+    "jsqr": "^1.2.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-loadable": "^5.5.0",
