--- a/package.json
+++ b/package.json
@@ -12,52 +12,53 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/polyfill": "^7.7.0",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
-    "autoprefixer": "^9.6.5",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-import": "^1.12.2",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.1",
+    "@babel/polyfill": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "autoprefixer": "^9.8.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^1.1.12",
-    "copy-webpack-plugin": "^5.0.4",
+    "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^6.0.3",
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.5.3",
     "cssnano": "^4.1.10",
-    "file-loader": "^4.2.0",
+    "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "file-loader": "^4.3.0",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
     "lodash-webpack-plugin": "^0.11.5",
-    "mini-css-extract-plugin": "^0.8.0",
+    "mini-css-extract-plugin": "^0.8.2",
     "mockjs": "^1.1.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "progress-bar-webpack-plugin": "^1.12.1",
-    "react-hot-loader": "^4.12.15",
+    "react-hot-loader": "^4.12.21",
     "sass-loader": "^7.3.1",
-    "style-loader": "^1.0.0",
-    "terser-webpack-plugin": "^2.2.1",
-    "url-loader": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.7.2",
+    "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^2.3.7",
+    "url-loader": "^2.3.0",
+    "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "^2.2.0",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "antd": "^3.24.2",
+    "antd": "^3.26.17",
     "crypto-js": "^4.0.0",
-    "jsqr": "^1.2.0",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "jsqr": "^1.3.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-loadable": "^5.5.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "uuid": "^3.3.3"
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "uuid": "^3.4.0"
   }
 }
