--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "antd": "^3.26.17",
     "crypto-js": "^4.0.0",
     "jsqr": "^1.3.1",
+    "lrz": "^4.9.40",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-loadable": "^5.5.0",
