--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,11 @@
 {
     "presets": [
         "@babel/preset-react",
-        // "@babel/preset-env",
         [
             "@babel/preset-env",
             {
-                "useBuiltIns": "usage"
+                "useBuiltIns": "usage",
+                "corejs": "3" //npm install --save core-js@3
             }
         ]
     ],
