--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "antd": "^3.26.17",
+    "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "jsqr": "^1.3.1",
     "lrz": "^4.9.40",
